[package]
name = "tt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
walkdir = "2.5.0"
colored = "3.0.0"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
libc = "0.2.175"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"